added home page content

--- a/index.html
+++ b/index.html
@@ -13,7 +13,10 @@
         <h1 id="webtitle">Web Education</h1>
         <h2 id="sub_title">Learn about Web Accessibility<br>and Standards!</h2>
         
+        <p id="describe">Tutorials, Examples, and much more!</p>
+        <p id="clickhere">Click here to get started!</p>
 
+        <h3 id="wcag">Web Content Accessibility Guidelines</h3>
         <script src = "assets/js/script.js"></script>
     </body>
 </html>
