--- a/index.html
+++ b/index.html
@@ -10,13 +10,26 @@
         <link href="https://fonts.googleapis.com/css2?family=Jura:wght@300..700&display=swap" rel="stylesheet">
     </head>
     <body>
-        <h1 id="webtitle">Web Education</h1>
+        <header id="webtitle">Web Education</header>
         <h2 id="sub_title">Learn about Web Accessibility<br>and Standards!</h2>
         
         <p id="describe">Tutorials, Examples, and much more!</p>
-        <p id="clickhere">Click here to get started!</p>
+        <p id="clickhere" onclick="scrollDown()">Click here to get started!</p>
 
-        <h3 id="wcag">Web Content Accessibility Guidelines</h3>
+        <div id="wcagrec"></div>
+        <h3 id="wcag">Web Content Accessibility<br>Guidelines</h3>
+        <h3 id="view">View More!</h3>
+
+        <div id="semanticrec"></div>
+        <h3 id="semantic">Semantic HTML</h3>
+        <h3 id="viewsemantic">View More!</h3>
+
+        <div id="accessrec"></div>
+        <h3 id="access">Accessibility</h3>
+        <h3 id="viewaccess">View More!</h3>
+
+        <div id="bottomrec"></div>
+        <footer id="bottom">Caitlin & Freya - 2024</footer>
         <script src = "assets/js/script.js"></script>
     </body>
 </html>
