home page finished / wcag page started

--- a/index.html
+++ b/index.html
@@ -18,15 +18,15 @@
 
         <div id="wcagrec"></div>
         <h3 id="wcag">Web Content Accessibility<br>Guidelines</h3>
-        <h3 id="view">View More!</h3>
+        <h3 id="view"><a href="wcag.html">View More!</a></h3>
 
         <div id="semanticrec"></div>
         <h3 id="semantic">Semantic HTML</h3>
-        <h3 id="viewsemantic">View More!</h3>
+        <h3 id="viewsemantic"><a href="semantic.html">View More!</a></h3>
 
         <div id="accessrec"></div>
         <h3 id="access">Accessibility</h3>
-        <h3 id="viewaccess">View More!</h3>
+        <h3 id="viewaccess"><a href="accessibility.html">View More!</a></h3>
 
         <div id="bottomrec"></div>
         <footer id="bottom">Caitlin & Freya - 2024</footer>
