responsive for pc - home and web guidelines pages

--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
         <header id="webtitle">Web Education</header>
 
         <div class="search-container-home">
-            <form action="/action_page.php">
-                <input class="search-home" type="text" placeholder="Search.." name="search">
-                <button class="button-home" type="submit"><i class="fa fa-search"></i></button>
+            <form id="search-bar" method="get">
+                <input class="search-home" type="search" placeholder="Search.." name="search">
+                <button class="button-home" type="submit"><img src="assets/imgs/search-icon.png"></button>
             </form>
         </div>
 
