--- a/wcag.html
+++ b/wcag.html
@@ -25,7 +25,7 @@
         </div>
 
         <div id="main">
-            <h2 id="access-title">Web Content Accessibility Guidelines</h2>
+            <h2 id="wcag-title">Web Content Accessibility Guidelines</h2>
             <p id="pour">There are 4 different principles for Web Content Accessibility Guidelines, these are:</p>
             <p id="perceive">Perceivable: All information and the interface must be properly presented to the users in a way that
                 is easily perceivable. Some key elements include:</p>
