--- a/index.html
+++ b/index.html
@@ -25,15 +25,15 @@
         <p id="clickhere" onclick="scrollDown()">Click here to get started!</p>
 
         <div id="wcagrec"></div>
-        <h3 id="wcag">Web Content Accessibility<br>Guidelines</h3>
+        <h3 id="wcag"><a href="wcag.html">Web Content Accessibility</a><br><a href="wcag.html">Guidelines</a></h3>
         <h3 id="view"><a href="wcag.html">View More!</a></h3>
 
         <div id="semanticrec"></div>
-        <h3 id="semantic">Semantic HTML</h3>
+        <h3 id="semantic"><a href="semantic.html">Semantic HTML</a></h3>
         <h3 id="viewsemantic"><a href="semantic.html">View More!</a></h3>
 
         <div id="accessrec"></div>
-        <h3 id="access">Accessibility</h3>
+        <h3 id="access"><a href="accessibility.html">Accessibility</a></h3>
         <h3 id="viewaccess"><a href="accessibility.html">View More!</a></h3>
 
         <div id="bottomrec"></div>
