testing side nav

--- a/semantic.html
+++ b/semantic.html
@@ -7,6 +7,12 @@
         <link rel="stylesheet" href="assets/css/screen.css">
     </head>
     <body>
+        <div class="sidenav">
+            <a href="wcag.html">WCAG</a>
+            <a href="semantic.html">Semantic</a>
+            <a href="accessibility.html">accessibility</a>
+        </div>
+    <div class="content-text">
         <h2 id="semantic-title">Semantic HTML</h2>
         <p>Semantic HTML helps screen readers and other assistive technologies understand the content and navigate it more effectively<br>By using these semantic HTML elements appropriately, you provide meaning and structure to your webpage, which benefits both users and assistive technologies like screen readers. This makes it easier for users to understand and navigate your content, improving accessibility and usability.</p>
 
@@ -126,7 +132,7 @@
         <p>&lt;footer&gt; Contains footer information such as copyright notices or contact information. In this example, the &lt;footer&gt; element encloses a copyright information</p>
 
         <footer>Copyright 2024</footer>
-        
+    </div>
         <script src = "assets/js/script.js"></script>
     </body>
 </html>
