--- a/semantic.html
+++ b/semantic.html
@@ -5,12 +5,23 @@
         <meta name = "viewport" content = "width = device-width, initial-scale = 1">
         <title>Group Project</title>
         <link rel="stylesheet" href="assets/css/screen.css">
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Jura:wght@300..700&display=swap" rel="stylesheet">
     </head>
     <body>
+        <header><a id="webtitle" href="index.html">Web Education</a></header>
+        
         <div class="sidenav">
-            <a href="wcag.html">WCAG</a>
-            <a href="semantic.html">Semantic</a>
-            <a href="accessibility.html">accessibility</a>
+            <div class="search-container">
+                <form action="/action_page.php">
+                    <input class="search" type="text" placeholder="Search.." name="search">
+                    <button class="button" type="submit"><i class="fa fa-search"><img src="assets/imgs/search-icon.png" alt="magnifying glass image"></i></button>
+                </form>
+            </div>
+            <a href="wcag.html">Web Content Accessibility Guidelines</a>
+            <a href="semantic.html">Semantic HTML</a>
+            <a href="accessibility.html">Accessibility</a>
         </div>
     <div class="content-text">
         <h2 id="semantic-title">Semantic HTML</h2>
@@ -22,18 +33,22 @@
             <code>
             &lt;!DOCTYPE html&gt;
             &lt;html&gt;
-                &lt;body&gt;
-                    &lt;h1&gt;Heading 1, the title/primary heading&lt;/h1&gt;
-                    &lt;h2&gt;Heading 2, major sections of content&lt;/h2&gt;
-                    &lt;h3&gt;Heading 3, subcategories/subtopics within a major section&lt;/h3&gt;
-                    &lt;h4&gt;Heading 4, a subsection under a main section&lt;/h4&gt;
-                    &lt;h5&gt;Heading 5, a subsection within a subsection&lt;/h5&gt;
-                    &lt;h6&gt;Heading 6, etc&lt;/h6&gt;
-                &lt;/body&gt;
+            &lt;body&gt;
+            &lt;h1&gt;Heading 1, the title/primary heading&lt;/h1&gt;
+            &lt;h2&gt;Heading 2, major sections of content&lt;/h2&gt;
+            &lt;h3&gt;Heading 3, subcategories/subtopics within a major section&lt;/h3&gt;
+            &lt;h4&gt;Heading 4, a subsection under a main section&lt;/h4&gt;
+            &lt;h5&gt;Heading 5, a subsection within a subsection&lt;/h5&gt;
+            &lt;h6&gt;Heading 6, etc&lt;/h6&gt;
+            &lt;/body&gt;
             &lt;/html&gt;
-        </code>
+            </code>
         </pre>
+        <div class="code-image">
+            <img src="assets/imgs/heading-snippet.png" width="50%">
         </div>
+        </div>
+        
         <p>&lt;header&gt; Represents the introductory content of the page, typically containing a logo, the website's name, and navigation links. Using &lt;h1&gt;, &lt;h2&gt;, &lt;h3&gt;, etc., to organize content hierarchically is crucial for creating a well-structured and meaningful document outline. Each heading level represents a different level of importance or hierarchy in the content.</p>
 
         <h3>Navigation</h3>
@@ -42,40 +57,43 @@
             <code>
             &lt;!DOCTYPE html&gt;
             &lt;html lang="en"&gt;
-                &lt;head&gt;
-                    &lt;style&gt;
-                        nav {
-                            background-color: #333;
-                            padding: 10px 0;
-                        }<br>
-                        ul {
-                            list-style-type: none;
-                            padding: 0;
-                            margin: 0;
-                            text-align: center;
-                        }<br>
-                        li {
-                            display: inline;
-                            margin-right: 20px;
-                        }<br>
-                        a {
-                            color: #fff;
-                        }<br>
-                    &lt;/style&gt;
-                &lt;/head&gt;
-                &lt;body&gt;
-                    &lt;nav&gt;
-                        &lt;ul&gt;
-                            &lt;li&gt;&lt;a href="link here"&gt;Home&lt;/a&gt;&lt;/li&gt;
-                            &lt;li&gt;&lt;a href="#"&gt;About&lt;/a&gt;&lt;/li&gt;
-                            &lt;li&gt;&lt;a href="#"&gt;Services&lt;/a&gt;&lt;/li&gt;
-                            &lt;li&gt;&lt;a href="#"&gt;Contact&lt;/a&gt;&lt;/li&gt;
-                        &lt;/ul&gt;
-                    &lt;/nav&gt;
-                &lt;/body&gt;
+            &lt;head&gt;
+            &lt;style&gt;
+            nav {
+                background-color: #333;
+                padding: 10px 0;
+            }
+            ul {
+                list-style-type: none;
+                padding: 0;
+                margin: 0;
+                text-align: center;
+            }
+            li {
+                display: inline;
+                margin-right: 20px;
+            }
+            a {
+                color: #fff;
+            }<br>
+            &lt;/style&gt;
+            &lt;/head&gt;
+            &lt;body&gt;
+            &lt;nav&gt;
+            &lt;ul&gt;
+            &lt;li&gt;&lt;a href="link here"&gt;Home&lt;/a&gt;&lt;/li&gt;
+            &lt;li&gt;&lt;a href="#"&gt;About&lt;/a&gt;&lt;/li&gt;
+            &lt;li&gt;&lt;a href="#"&gt;Services&lt;/a&gt;&lt;/li&gt;
+            &lt;li&gt;&lt;a href="#"&gt;Contact&lt;/a&gt;&lt;/li&gt;
+            &lt;/ul&gt;
+            &lt;/nav&gt;
+            &lt;/body&gt;
             &lt;/html&gt;
             </code>
         </pre>
+        </div>
+        <div class="code-image">
+            <img src="assets/imgs/nav-snippet.png" width="50%">
         </div>
         <p>&lt;nav&gt; Indicates a section of navigation links. By using the &lt;nav&gt; element, you provide semantic meaning to the navigation links, making it clear to both users and assistive technologies that these links are part of the website's navigation system. This enhances accessibility and helps users understand the purpose and function of the navigation section.</p>
 
@@ -85,21 +103,24 @@
             <code>
             &lt;!DOCTYPE html&gt;
             &lt;html&gt;
-                &lt;body&gt;
-                    &lt;main&gt;
-                        &lt;section&gt;
-                            &lt;h2&gt;About Us&lt;/h2&gt;
-                            &lt;p&gt;Lorem ipsum dolor sit amet, consectetur adipiscing elit.&lt;/p&gt;
-                        &lt;/section&gt;
-                        &lt;section&gt;
-                            &lt;h2&gt;Contact Us&lt;/h2&gt;
-                            &lt;p&gt;Contact us at contact@example.com or call us at +1234567890.&lt;/p&gt;
-                        &lt;/section&gt;
-                    &lt;/main&gt;
-                &lt;/body&gt;
+            &lt;body&gt;
+            &lt;main&gt;
+            &lt;section&gt;
+            &lt;h2&gt;About Us&lt;/h2&gt;
+            &lt;p&gt;Lorem ipsum dolor sit amet, consectetur adipiscing elit.&lt;/p&gt;
+            &lt;/section&gt;
+            &lt;section&gt;
+            &lt;h2&gt;Contact Us&lt;/h2&gt;
+            &lt;p&gt;Contact us at contact@example.com or call us at +1234567890.&lt;/p&gt;
+            &lt;/section&gt;
+            &lt;/main&gt;
+            &lt;/body&gt;
             &lt;/html&gt;  
             </code>
         </pre>
+        </div>
+        <div class="code-image">
+            <img src="assets/imgs/main-snippet.png" width="50%">
         </div>
         <p>&lt;main&gt; Contains the primary content of the webpage. While &lt;section&gt; Defines sections within the main content, each with a heading</p>
         <p>In this example, the &lt;main&gt; element encloses two sections (&lt;section&gt; elements), each containing specific content related to the about and contact sections of the webpage. This indicates that these sections constitute the main content of the webpage.</p>
@@ -110,24 +131,27 @@
             <code>
             &lt;!DOCTYPE html&gt;
             &lt;html lang="en"&gt;
-                &lt;head&gt;
-                    &lt;style&gt;
-                        footer {
-                            background-color: #333;
-                            color: #fff;
-                            padding: 20px;
-                            text-align: center;
-                        }
-                    &lt;/style&gt;
-                &lt;/head&gt;
-                &lt;body&gt;
-                    &lt;footer&gt;
-                        &amp;copy; 2024 My Website
-                    &lt;/footer&gt;
-                &lt;/body&gt;
+            &lt;head&gt;
+            &lt;style&gt;
+            footer {
+                background-color: #333;
+                color: #fff;
+                padding: 20px;
+                text-align: center;
+            }
+            &lt;/style&gt;
+            &lt;/head&gt;
+            &lt;body&gt;
+            &lt;footer&gt;
+            &amp;copy; 2024 My Website
+            &lt;/footer&gt;
+            &lt;/body&gt;
             &lt;/html&gt;
             </code>
         </pre>
+        </div>
+        <div class="code-image">
+            <img src="assets/imgs/footer-snippet.png" width="50%">
         </div>
         <p>&lt;footer&gt; Contains footer information such as copyright notices or contact information. In this example, the &lt;footer&gt; element encloses a copyright information</p>
 
