all info added to wcag page / readme updated

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <div class="search-container-home">
             <form id="search-bar" method="get">
                 <input class="search-home" type="search" placeholder="Search.." name="search">
-                <button class="button-home" type="submit"><img src="assets/imgs/search-icon.png"></button>
+                <button class="button-home" type="submit"><img src="assets/imgs/search-icon.png" alt="magnifying glass image"></button>
             </form>
         </div>
 
