--- a/wcag.html
+++ b/wcag.html
@@ -26,7 +26,7 @@
 
         <div id="main">
             <h2 id="wcag-title">Web Content Accessibility Guidelines</h2>
-            <h3 id="pour-title">P.O.U.R</h3>
+            <h3 id="pour-title">P.O.U.R - Principles</h3>
             <p id="pour">There are 4 different principles for Web Content Accessibility Guidelines, these are:</p>
             <p id="perceive"><b>Perceivable:</b> All information and the interface must be properly presented to the users in a way that
                 is easily perceivable. Some key elements include:</p>
@@ -66,7 +66,20 @@
                 <mark>Semantic HTML:</mark> Semantic HTML must be used to ensure that the site is well structured.
             </p>
 
-            <h3 id="compliance">Compliance Level</h3>
+            <h3 id="compliance-title">Compliance Level</h3>
+            <p id="compliance">In the Web Content Accessibility Guidelines, there are three levels of compliance: A (lowest), AA (middle), and AAA (highest).
+                These are based on how accessible the website is.
+            </p>
+            <p id="level-a"><mark>Level A (Minimum):</mark> This is given when the site reaches the basic requirements for accessibility. All sites should have at least
+                this level of compliance for accessibility.
+            </p>
+            <p id="level-aa"><mark>Level AA (Mid-Level):</mark> This is given when the site has a higher level of accessibility. These are considered to be
+                decently accessible and will give a better experience to those using the site. Often it includes better navigation, better contrast, and it is compatible with
+                assistive technologies.
+            </p>
+            <p id="level-aaa"><mark>Level AAA (Highest):</mark> This is given when the site is at the highest possible level of accessibility. A site with this level will
+            give the best possible experience to those who use assistive technologies, use other forms of navigation, etc. It will include all options of
+            accessibility, with alt text in the site, captions on videos, strong contrast, and clear instructions/error messages.</p>
         </div>
 
         <script src = "assets/js/script.js"></script>
