responsive for mobile edited

--- a/wcag.html
+++ b/wcag.html
@@ -24,6 +24,18 @@
             <a href="accessibility.html">Accessibility</a>
         </div>
 
+        <div class="topnav">
+            <a href="javascript:void(0);" class="icon" onclick="myFunction()">
+                <i class="fa fa-bars"></i>
+            </a>
+        <div id="myLinks">
+            <a href="index.html">Home</a>
+            <a href="wcag.html">WCAG</a>
+            <a href="semantic.html">Semantic</a>
+            <a href="accessibility.html">Access.</a>
+        </div>
+    </div>
+
         <div id="main">
             <h2 id="wcag-title">Web Content Accessibility Guidelines</h2>
             <h3 id="pour-title">P.O.U.R - Principles</h3>
