added ineractivity and some text in accesibility

--- a/semantic.html
+++ b/semantic.html
@@ -27,9 +27,10 @@
         <h2 id="semantic-title">Semantic HTML</h2>
         <p>Semantic HTML helps screen readers and other assistive technologies understand the content and navigate it more effectively<br>By using these semantic HTML elements appropriately, you provide meaning and structure to your webpage, which benefits both users and assistive technologies like screen readers. This makes it easier for users to understand and navigate your content, improving accessibility and usability.</p>
 
-        <h3>Heading</h3>
-        <div class="code-snippet">
-        <pre>
+        <div class="content-container">
+            <div class="content-item content0"><h3>Heading</h3></div>
+            <div class="content-item content1 code-snippet">
+            <pre>
             <code>
             &lt;!DOCTYPE html&gt;
             &lt;html&gt;
@@ -43,17 +44,14 @@
             &lt;/body&gt;
             &lt;/html&gt;
             </code>
-        </pre>
-        <div class="code-image">
-            <img src="assets/imgs/heading-snippet.png" width="50%">
+            </pre>
+            </div>
+            <div class="content-item content2"><p>&lt;header&gt; Represents the introductory content of the page, typically containing a logo, the website's name, and navigation links. Using &lt;h1&gt;, &lt;h2&gt;, &lt;h3&gt;, etc., to organize content hierarchically is crucial for creating a well-structured and meaningful document outline. Each heading level represents a different level of importance or hierarchy in the content.</p></div>
         </div>
-        </div>
-        
-        <p>&lt;header&gt; Represents the introductory content of the page, typically containing a logo, the website's name, and navigation links. Using &lt;h1&gt;, &lt;h2&gt;, &lt;h3&gt;, etc., to organize content hierarchically is crucial for creating a well-structured and meaningful document outline. Each heading level represents a different level of importance or hierarchy in the content.</p>
-
-        <h3>Navigation</h3>
-        <div class="code-snippet">
-        <pre>
+        <div class="content-container">
+            <div class="content-item content0"><h3>Navigation</h3></div>
+            <div class="content-item content1 code-snippet">
+            <pre>
             <code>
             &lt;!DOCTYPE html&gt;
             &lt;html lang="en"&gt;
@@ -90,16 +88,14 @@
             &lt;/body&gt;
             &lt;/html&gt;
             </code>
-        </pre>
+            </pre>
+            </div>
+            <div class="content-item content2"><p>&lt;nav&gt; Indicates a section of navigation links. By using the &lt;nav&gt; element, you provide semantic meaning to the navigation links, making it clear to both users and assistive technologies that these links are part of the website's navigation system. This enhances accessibility and helps users understand the purpose and function of the navigation section.</p></div>
         </div>
-        <div class="code-image">
-            <img src="assets/imgs/nav-snippet.png" width="50%">
-        </div>
-        <p>&lt;nav&gt; Indicates a section of navigation links. By using the &lt;nav&gt; element, you provide semantic meaning to the navigation links, making it clear to both users and assistive technologies that these links are part of the website's navigation system. This enhances accessibility and helps users understand the purpose and function of the navigation section.</p>
-
-        <h3>Main and Section</h3>
-        <div class="code-snippet">
-        <pre>
+        <div class="content-container">
+            <div class="content-item content0"><h3>Main and Section</h3></div>
+            <div class="content-item content1 code-snippet">
+            <pre>
             <code>
             &lt;!DOCTYPE html&gt;
             &lt;html&gt;
@@ -115,19 +111,17 @@
             &lt;/section&gt;
             &lt;/main&gt;
             &lt;/body&gt;
-            &lt;/html&gt;  
+            &lt;/html&gt; 
             </code>
-        </pre>
+            </pre>
+            </div>
+            <div class="content-item content2"><p>&lt;main&gt; Contains the primary content of the webpage. While &lt;section&gt; Defines sections within the main content, each with a heading</p>
+                <p>In this example, the &lt;main&gt; element encloses two sections (&lt;section&gt; elements), each containing specific content related to the about and contact sections of the webpage. This indicates that these sections constitute the main content of the webpage.</p></div>
         </div>
-        <div class="code-image">
-            <img src="assets/imgs/main-snippet.png" width="50%">
-        </div>
-        <p>&lt;main&gt; Contains the primary content of the webpage. While &lt;section&gt; Defines sections within the main content, each with a heading</p>
-        <p>In this example, the &lt;main&gt; element encloses two sections (&lt;section&gt; elements), each containing specific content related to the about and contact sections of the webpage. This indicates that these sections constitute the main content of the webpage.</p>
-
-        <h3>Footer</h3>
-        <div class="code-snippet">
-        <pre>
+        <div class="content-container">
+            <div class="content-item content0"><h3>Footer</h3></div>
+            <div class="content-item content1 code-snippet">
+            <pre>
             <code>
             &lt;!DOCTYPE html&gt;
             &lt;html lang="en"&gt;
@@ -148,12 +142,10 @@
             &lt;/body&gt;
             &lt;/html&gt;
             </code>
-        </pre>
+            </pre>
+            </div>
+            <div class="content-item content2"><p>&lt;footer&gt;typically appears at the bottom. It often contains information such as copyright notices, links to terms of service, privacy policies, contact information, and sometimes navigation links.</p></div>
         </div>
-        <div class="code-image">
-            <img src="assets/imgs/footer-snippet.png" width="50%">
-        </div>
-        <p>&lt;footer&gt; Contains footer information such as copyright notices or contact information. In this example, the &lt;footer&gt; element encloses a copyright information</p>
 
         <footer>Copyright 2024</footer>
     </div>
