pc monitor reponsive for homepage + wcag page

--- a/semantic.html
+++ b/semantic.html
@@ -13,14 +13,8 @@
         <header><a id="webtitle" href="index.html">Web Education</a></header>
         
         <div class="sidenav">
-            <div class="search-container">
-                <form action="/action_page.php">
-                    <input class="search" type="text" placeholder="Search.." name="search">
-                    <button class="button" type="submit"><i class="fa fa-search"><img src="assets/imgs/search-icon.png" alt="magnifying glass image"></i></button>
-                </form>
-            </div>
             <a href="wcag.html">Web Content Accessibility Guidelines</a>
-            <a href="semantic.html">Semantic HTML</a>
+            <a id="active" href="semantic.html">Semantic HTML</a>
             <a href="accessibility.html">Accessibility</a>
         </div>
     <div class="content-text">
