--- a/wcag.html
+++ b/wcag.html
@@ -13,12 +13,6 @@
         <header><a id="webtitle" href="index.html">Web Education</a></header>
 
         <div class="sidenav">
-            <div class="search-container">
-                <form action="/action_page.php">
-                    <input class="search" type="text" placeholder="Search.." name="search">
-                    <button class="button" type="submit"><i class="fa fa-search"><img src="assets/imgs/search-icon.png" alt="magnifying glass image"></i></button>
-                </form>
-            </div>
             <a id="active" href="wcag.html">Web Content Accessibility Guidelines</a>
             <a href="semantic.html">Semantic HTML</a>
             <a href="accessibility.html">Accessibility</a>
@@ -82,17 +76,17 @@
             <p id="compliance">In the Web Content Accessibility Guidelines, there are three levels of compliance: A (lowest), AA (middle), and AAA (highest).
                 These are based on how accessible the website is.
             </p>
-            <p id="level-a"><mark>Level A (Minimum):</mark> This is given when the site reaches the basic requirements for accessibility. All sites should have at least
-                this level of compliance for accessibility.
-            </p>
-            <p id="level-aa"><mark>Level AA (Mid-Level):</mark> This is given when the site has a higher level of accessibility. These are considered to be
+            <p id="levels"><mark>Level A (Minimum):</mark> This is given when the site reaches the basic requirements for accessibility. All sites should have at least
+                this level of compliance for accessibility. <br><br> <mark>Level AA (Mid-Level):</mark> This is given when the site has a higher level of accessibility. These are considered to be
                 decently accessible and will give a better experience to those using the site. Often it includes better navigation, better contrast, and it is compatible with
-                assistive technologies.
+                assistive technologies. <br><br> <mark>Level AAA (Highest):</mark> This is given when the site is at the highest possible level of accessibility. A site with this level will
+                give the best possible experience to those who use assistive technologies, use other forms of navigation, etc. It will include all options of
+                accessibility, with alt text in the site, captions on videos, strong contrast, and clear instructions/error messages. 
             </p>
-            <p id="level-aaa"><mark>Level AAA (Highest):</mark> This is given when the site is at the highest possible level of accessibility. A site with this level will
-            give the best possible experience to those who use assistive technologies, use other forms of navigation, etc. It will include all options of
-            accessibility, with alt text in the site, captions on videos, strong contrast, and clear instructions/error messages.</p>
         </div>
+
+        <div id="bottomrec-wcag"></div>
+        <footer id="bottom-wcag">Caitlin & Freya - 2024</footer>
 
         <script src = "assets/js/script.js"></script>
     </body>
