animations added to sidebar menu

--- a/accessibility.html
+++ b/accessibility.html
@@ -16,7 +16,7 @@
         <div class="sidenav">
             <a href="wcag.html">Web Content Accessibility Guidelines</a>
             <a href="semantic.html">Semantic HTML</a>
-            <a href="accessibility.html">Accessibility</a>
+            <a id="active" href="accessibility.html">Accessibility</a>
         </div>
     <div class="content-text">
         <h2 id="accessibility-title">Accessibility</h2>
