--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
         <h3 id="access"><a href="accessibility.html">Accessibility</a></h3>
         <h3 id="viewaccess"><a href="accessibility.html">View More!</a></h3>
 
-        <div id="bottomrec"></div>
-        <footer id="bottom">Caitlin & Freya - 2024</footer>
+        
+        <footer id="bottom">Copyright 2024</footer>
         <script src = "assets/js/script.js"></script>
     </body>
 </html>
