--- a/wcag.html
+++ b/wcag.html
@@ -18,18 +18,6 @@
             <a href="accessibility.html">Accessibility</a>
         </div>
 
-        <div class="topnav">
-            <a href="javascript:void(0);" class="icon" onclick="myFunction()">
-                <i class="fa fa-bars"></i>
-            </a>
-        <div id="myLinks">
-            <a href="index.html">Home</a>
-            <a href="wcag.html">WCAG</a>
-            <a href="semantic.html">Semantic</a>
-            <a href="accessibility.html">Access.</a>
-        </div>
-    </div>
-
         <div id="main">
             <h2 id="wcag-title">Web Content Accessibility Guidelines</h2>
             <h3 id="pour-title">P.O.U.R - Principles</h3>
@@ -86,7 +74,7 @@
         </div>
 
         
-        <footer id="bottom-wcag">Caitlin & Freya - 2024</footer>
+        <footer id="bottom-wcag">Copyright 2024</footer>
 
         <script src = "assets/js/script.js"></script>
     </body>
