documentation added/hamburger menu added

--- a/wcag.html
+++ b/wcag.html
@@ -8,6 +8,7 @@
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Jura:wght@300..700&display=swap" rel="stylesheet">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     </head>
     <body>
         <header><a id="webtitle" href="index.html">Web Education</a></header>
@@ -71,6 +72,18 @@
                 give the best possible experience to those who use assistive technologies, use other forms of navigation, etc. It will include all options of
                 accessibility, with alt text in the site, captions on videos, strong contrast, and clear instructions/error messages. 
             </p>
+        </div>
+
+        <div class="topnav">
+            <div id="myLinks">
+                <a id="topofmenu"></a>
+            <a class="active" href="wcag.html">Web Content Accessibility Guidelines</a>
+            <a href="semantic.html">Semantic HTML</a>
+            <a href="accessibility.html">Accessibility</a>
+            </div>
+            <a href="javascript:void(0);" class="icon" onclick="myFunction()">
+            <i class="fa fa-bars"></i>
+            </a>
         </div>
 
         
