--- a/wcag.html
+++ b/wcag.html
@@ -18,6 +18,17 @@
             <a href="semantic.html">Semantic HTML</a>
             <a href="accessibility.html">Accessibility</a>
         </div>
+        <div class="topnav">
+            <div id="myLinks">
+            <a href="index.html">Home</a>
+            <a class="active" href="wcag.html">Web Content Accessibility Guidelines</a>
+            <a href="semantic.html">Semantic HTML</a>
+            <a href="accessibility.html">Accessibility</a>
+            </div>
+            <a href="javascript:void(0);" class="icon" onclick="myFunction()">
+            <i class="fa fa-bars"></i>
+            </a>
+        </div>
 
         <div id="main">
             <h2 id="wcag-title">Web Content Accessibility Guidelines</h2>
@@ -74,19 +85,6 @@
             </p>
         </div>
 
-        <div class="topnav">
-            <div id="myLinks">
-                <a id="topofmenu"></a>
-            <a class="active" href="wcag.html">Web Content Accessibility Guidelines</a>
-            <a href="semantic.html">Semantic HTML</a>
-            <a href="accessibility.html">Accessibility</a>
-            </div>
-            <a href="javascript:void(0);" class="icon" onclick="myFunction()">
-            <i class="fa fa-bars"></i>
-            </a>
-        </div>
-
-        
         <footer id="bottom-wcag">Copyright 2024</footer>
 
         <script src = "assets/js/script.js"></script>
