--- a/semantic.html
+++ b/semantic.html
@@ -8,6 +8,7 @@
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Jura:wght@300..700&display=swap" rel="stylesheet">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
         
     </head>
     <body>
@@ -17,6 +18,17 @@
             <a href="wcag.html">Web Content Accessibility Guidelines</a>
             <a id="active" href="semantic.html">Semantic HTML</a>
             <a href="accessibility.html">Accessibility</a>
+        </div>
+        <div class="topnav">
+            <div id="myLinks">
+            <a href="index.html">Home</a>
+            <a class="active" href="wcag.html">Web Content Accessibility Guidelines</a>
+            <a href="semantic.html">Semantic HTML</a>
+            <a href="accessibility.html">Accessibility</a>
+            </div>
+            <a href="javascript:void(0);" class="icon" onclick="myFunction()">
+            <i class="fa fa-bars"></i>
+            </a>
         </div>
     <div class="content-text">
         <h2 id="semantic-title">Semantic HTML</h2>
