--- a/accessibility.html
+++ b/accessibility.html
@@ -12,7 +12,7 @@
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     </head>
     <body>
-        <header><a id="webtitle" href="index.html">Web Education</a></header>
+        <header><a id="webtitle" href="index.html">Best Practices</a></header>
         
         <div class="sidenav">
             <a href="wcag.html">Web Content Accessibility Guidelines</a>
