--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         <link href="https://fonts.googleapis.com/css2?family=Jura:wght@300..700&display=swap" rel="stylesheet">
     </head>
     <body>
-        <header id="webtitle">Web Education</header>
+        <header id="webtitle">Best Practices</header>
 
         <h2 id="sub_title">Learn about Web Accessibility<br>and Standards!</h2>
         
