--- a/wcag.html
+++ b/wcag.html
@@ -11,23 +11,12 @@
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     </head>
     <body>
-        <header><a id="webtitle" href="index.html">Web Education</a></header>
+        <header><a id="webtitle" href="index.html">Best Practices</a></header>
 
         <div class="sidenav">
             <a id="active" href="wcag.html">Web Content Accessibility Guidelines</a>
             <a href="semantic.html">Semantic HTML</a>
             <a href="accessibility.html">Accessibility</a>
-        </div>
-        <div class="topnav">
-            <div id="myLinks">
-            <a href="index.html">Home</a>
-            <a class="active" href="wcag.html">Web Content Accessibility Guidelines</a>
-            <a href="semantic.html">Semantic HTML</a>
-            <a href="accessibility.html">Accessibility</a>
-            </div>
-            <a href="javascript:void(0);" class="icon" onclick="myFunction()">
-            <i class="fa fa-bars"></i>
-            </a>
         </div>
 
         <div id="main">
@@ -36,7 +25,7 @@
             <p id="pour">There are 4 different principles for Web Content Accessibility Guidelines, these are:</p>
             <p id="perceive"><b>Perceivable:</b> All information and the interface must be properly presented to the users in a way that
                 is easily perceivable. Some key elements include:</p>
-            <p id="perceive-ex"> <mark>Alternate Text:</mark> This gives descriptions for images, graphics, controls, and other parts of the site
+            <p id="perceive-ex"> <mark>Alternate Text:</mark> This gives descriptions for images, graphics, controls, and other parts of the site -
                 <br><br> <mark>Adaptable Content:</mark> This is when the site can be presented properly on various different
                 screen sizes without changing any content. <br><br> <mark>Distinguishable Content:</mark> This means that all information and 
                 items on the screen must be easily distinguishable from each other by every users, including those with colour
@@ -83,6 +72,18 @@
                 give the best possible experience to those who use assistive technologies, use other forms of navigation, etc. It will include all options of
                 accessibility, with alt text in the site, captions on videos, strong contrast, and clear instructions/error messages. 
             </p>
+        </div>
+
+        <div class="topnav">
+            <div id="myLinks">
+            <a href="index.html">Home</a>
+            <a class="active" href="wcag.html">Web Content Accessibility Guidelines</a>
+            <a href="semantic.html">Semantic HTML</a>
+            <a href="accessibility.html">Accessibility</a>
+            </div>
+            <a href="javascript:void(0);" class="icon" onclick="myFunction()">
+            <i class="fa fa-bars"></i>
+            </a>
         </div>
 
         <footer id="bottom-wcag">Copyright 2024</footer>
