--- a/semantic.html
+++ b/semantic.html
@@ -12,7 +12,7 @@
         
     </head>
     <body>
-        <header><a id="webtitle" href="index.html">Web Education</a></header>
+        <header><a id="webtitle" href="index.html">Best Practices</a></header>
         
         <div class="sidenav">
             <a href="wcag.html">Web Content Accessibility Guidelines</a>
